# pc1-rs

./: Cargo.toml  Cross.toml  LICENSE  Makefile.toml  README.md  build.rs
pc1_128/: pc1_128.c  test.c
pc1_256/: pc1_256.c  test.c
src/: lib.rs
