[package]
name = "pc1-rs"
version = "0.1.0"
edition = "2021"
authors = ["zhangchao <zackability@hotmail.com>"]
keywords = ["pc1", "cipher"]
categories = ["Cryptography"]
homepage = "https://github.com/zhangchaoza/pc1-rs"
license = "MIT"
description = "A simple PC1 cipher"
readme = "README.md"
repository = "https://github.com/zhangchaoza/pc1-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0.83"
